--- a/geomelody/geomelody/en.lproj/PlayerViewController.xib
+++ b/geomelody/geomelody/en.lproj/PlayerViewController.xib
@@ -14,6 +14,7 @@
 			<string>IBProxyObject</string>
 			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
+			<string>IBUILabel</string>
 			<string>IBUITextView</string>
 			<string>IBUIView</string>
 		</array>
@@ -40,31 +41,91 @@
 					<object class="IBUIImageView" id="731627572">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 39}, {320, 270}}</string>
+						<string key="NSFrameSize">{320, 270}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1063613071"/>
+						<reference key="NSNextKeyView" ref="293288795"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
+					<object class="IBUILabel" id="293288795">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{16, 29}, {298, 21}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="261208954"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">Title</string>
+						<object class="NSColor" key="IBUITextColor" id="860939399">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwIDAAA</bytes>
+							<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">0</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">2</int>
+							<double key="pointSize">17</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">17</double>
+							<int key="NSfFlags">16</int>
+						</object>
+					</object>
+					<object class="IBUILabel" id="261208954">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{16, 51}, {151, 21}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">Interpreter</string>
+						<reference key="IBUITextColor" ref="860939399"/>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">0</int>
+						<float key="IBUIMinimumFontSize">8</float>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">1</int>
+							<double key="pointSize">15</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">15</double>
+							<int key="NSfFlags">16</int>
+						</object>
 					</object>
 					<object class="IBUIView" id="1063613071">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIButton" id="542955711">
+							<object class="IBUIButton" id="784089984">
 								<reference key="NSNextResponder" ref="1063613071"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{48, 84}, {64, 64}}</string>
+								<string key="NSFrame">{{128, 68}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="784089984"/>
+								<reference key="NSNextKeyView" ref="575022889"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
+								<float key="IBUIAlpha">0.89999997615814209</float>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<string key="IBUINormalTitle">&lt;</string>
 								<object class="NSColor" key="IBUIHighlightedTitleColor" id="909708934">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -79,13 +140,13 @@
 								</object>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">arrow-left64.png</string>
+									<string key="NSResourceName">pause64.png</string>
 								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription" id="993603845">
 									<int key="type">2</int>
 									<double key="pointSize">15</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="1024914856">
+								<object class="NSFont" key="IBUIFont" id="578261555">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
@@ -94,12 +155,13 @@
 							<object class="IBUIButton" id="575022889">
 								<reference key="NSNextResponder" ref="1063613071"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{168, 84}, {64, 64}}</string>
+								<string key="NSFrame">{{262, 141}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="584665343"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
+								<float key="IBUIAlpha">0.89999997615814209</float>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -115,20 +177,22 @@
 									<string key="NSResourceName">arrow-right64.png</string>
 								</object>
 								<reference key="IBUIFontDescription" ref="993603845"/>
-								<reference key="IBUIFont" ref="1024914856"/>
+								<reference key="IBUIFont" ref="578261555"/>
 							</object>
-							<object class="IBUIButton" id="784089984">
+							<object class="IBUIButton" id="542955711">
 								<reference key="NSNextResponder" ref="1063613071"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{108, 84}, {64, 64}}</string>
+								<string key="NSFrame">{{-6, 141}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="575022889"/>
+								<reference key="NSNextKeyView" ref="784089984"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
+								<float key="IBUIAlpha">0.89999997615814209</float>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
+								<string key="IBUINormalTitle">&lt;</string>
 								<reference key="IBUIHighlightedTitleColor" ref="909708934"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
@@ -137,13 +201,13 @@
 								<reference key="IBUINormalTitleShadowColor" ref="425119661"/>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">pause64.png</string>
+									<string key="NSResourceName">arrow-left64.png</string>
 								</object>
 								<reference key="IBUIFontDescription" ref="993603845"/>
-								<reference key="IBUIFont" ref="1024914856"/>
+								<reference key="IBUIFont" ref="578261555"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{20, 58}, {280, 232}}</string>
+						<string key="NSFrame">{{0, 70}, {320, 200}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="542955711"/>
@@ -152,12 +216,13 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MSAxIDEgMAA</bytes>
 						</object>
+						<float key="IBUIAlpha">0.89999997615814209</float>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUITextView" id="633299990">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{124, 309}, {176, 115}}</string>
+						<string key="NSFrame">{{124, 281}, {176, 115}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -187,7 +252,7 @@
 					<object class="IBUIImageView" id="584665343">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{7, 291}, {100, 100}}</string>
+						<string key="NSFrame">{{5, 281}, {100, 100}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="633299990"/>
@@ -271,6 +336,22 @@
 					<int key="connectionID">14</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">songTitle</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="293288795"/>
+					</object>
+					<int key="connectionID">48</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">songInterpreter</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="261208954"/>
+					</object>
+					<int key="connectionID">49</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">togglePlayingState:</string>
 						<reference key="source" ref="784089984"/>
@@ -310,10 +391,12 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1063613071"/>
+							<reference ref="633299990"/>
 							<reference ref="731627572"/>
 							<reference ref="584665343"/>
-							<reference ref="633299990"/>
+							<reference ref="1063613071"/>
+							<reference ref="293288795"/>
+							<reference ref="261208954"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -354,9 +437,19 @@
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">29</int>
-						<reference key="object" ref="542955711"/>
+						<int key="objectID">13</int>
+						<reference key="object" ref="784089984"/>
 						<reference key="parent" ref="1063613071"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">42</int>
+						<reference key="object" ref="293288795"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">43</int>
+						<reference key="object" ref="261208954"/>
+						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">31</int>
@@ -364,8 +457,8 @@
 						<reference key="parent" ref="1063613071"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">13</int>
-						<reference key="object" ref="784089984"/>
+						<int key="objectID">29</int>
+						<reference key="object" ref="542955711"/>
 						<reference key="parent" ref="1063613071"/>
 					</object>
 				</array>
@@ -384,12 +477,14 @@
 				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="35.CustomClassName">UICircularSlider</string>
 				<string key="35.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="42.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="43.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">36</int>
+			<int key="maxID">51</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -430,19 +525,27 @@
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="artwork_picture">UIImageView</string>
+						<string key="likes">UILabel</string>
 						<string key="nextButton">UIButton</string>
 						<string key="pauseStart">NSDate</string>
 						<string key="playPauseButton">UIButton</string>
 						<string key="previousButton">UIButton</string>
 						<string key="previousFireDate">NSDate</string>
+						<string key="shares">UILabel</string>
+						<string key="songInterpreter">UILabel</string>
 						<string key="songProgressControl">UICircularSlider</string>
 						<string key="songProgressTimer">NSTimer</string>
+						<string key="songTitle">UILabel</string>
 						<string key="user_picture">UIImageView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="artwork_picture">
 							<string key="name">artwork_picture</string>
 							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="likes">
+							<string key="name">likes</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="nextButton">
 							<string key="name">nextButton</string>
@@ -464,6 +567,14 @@
 							<string key="name">previousFireDate</string>
 							<string key="candidateClassName">NSDate</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="shares">
+							<string key="name">shares</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songInterpreter">
+							<string key="name">songInterpreter</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="songProgressControl">
 							<string key="name">songProgressControl</string>
 							<string key="candidateClassName">UICircularSlider</string>
@@ -471,6 +582,10 @@
 						<object class="IBToOneOutletInfo" key="songProgressTimer">
 							<string key="name">songProgressTimer</string>
 							<string key="candidateClassName">NSTimer</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songTitle">
+							<string key="name">songTitle</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="user_picture">
 							<string key="name">user_picture</string>
